# simpletafl

./: Cargo.toml
src/: main.rs
src/tafl/: alphabeta.rs  board.rs  mod.rs  negamax.rs  tmove.rs
