[package]
name = "simpletafl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3               # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.
debug = 1

[dependencies]
num = "0.2.1"
bitvec = "1"
colored = "2.0.0"
unroll = "0.1.5"
metrohash = "1.0.6"
argparse = "0.2.2"
text_io = "0.1.12"
futures = "0.3.13"